<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="show_additional_fields">Show Additional Fields</string>
    <string name="name_hint">Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="address_hint">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="hide_additional_details">Hide Additional Details</string>
    <string name="phone_error">Phone number is empty!</string>
</resources>
